fl_dll/library.h

extern double sumD(double d1, double d2);
extern double sumArrD(double *arr, int count);
extern double sumArrDD(const double *arr, const double *arr2, int count);
extern void readD(double *v, int set);
extern double sumMatDPtrPtr(int rows, int cols, const double** mat);
extern float sumArrF(const float *arr, int count);