src/test/java/jpassport/test/extracted/library_h.java

// Generated by jextract

package jpassport.test.extracted;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class library_h {

    library_h() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();
    static final boolean TRACE_DOWNCALLS = Boolean.getBoolean("jextract.trace.downcalls");

    static void traceDowncall(String name, Object... args) {
         String traceArgs = Arrays.stream(args)
                       .map(Object::toString)
                       .collect(Collectors.joining(", "));
         System.out.printf("%s(%s)\n", name, traceArgs);
    }

    static MemorySegment findOrThrow(String symbol) {
        return SYMBOL_LOOKUP.find(symbol)
            .orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol: " + symbol));
    }

    static MethodHandle upcallHandle(Class<?> fi, String name, FunctionDescriptor fdesc) {
        try {
            return MethodHandles.lookup().findVirtual(fi, name, fdesc.toMethodType());
        } catch (ReflectiveOperationException ex) {
            throw new AssertionError(ex);
        }
    }

    static MemoryLayout align(MemoryLayout layout, long align) {
        return switch (layout) {
            case PaddingLayout p -> p;
            case ValueLayout v -> v.withByteAlignment(align);
            case GroupLayout g -> {
                MemoryLayout[] alignedMembers = g.memberLayouts().stream()
                        .map(m -> align(m, align)).toArray(MemoryLayout[]::new);
                yield g instanceof StructLayout ?
                        MemoryLayout.structLayout(alignedMembers) : MemoryLayout.unionLayout(alignedMembers);
            }
            case SequenceLayout s -> MemoryLayout.sequenceLayout(s.elementCount(), align(s.elementLayout(), align));
        };
    }

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.libraryLookup(System.mapLibraryName("libpassport_test"), LIBRARY_ARENA)
            .or(SymbolLookup.loaderLookup())
            .or(Linker.nativeLinker().defaultLookup());

    public static final ValueLayout.OfBoolean C_BOOL = ValueLayout.JAVA_BOOLEAN;
    public static final ValueLayout.OfByte C_CHAR = ValueLayout.JAVA_BYTE;
    public static final ValueLayout.OfShort C_SHORT = ValueLayout.JAVA_SHORT;
    public static final ValueLayout.OfInt C_INT = ValueLayout.JAVA_INT;
    public static final ValueLayout.OfLong C_LONG_LONG = ValueLayout.JAVA_LONG;
    public static final ValueLayout.OfFloat C_FLOAT = ValueLayout.JAVA_FLOAT;
    public static final ValueLayout.OfDouble C_DOUBLE = ValueLayout.JAVA_DOUBLE;
    public static final AddressLayout C_POINTER = ValueLayout.ADDRESS
            .withTargetLayout(MemoryLayout.sequenceLayout(java.lang.Long.MAX_VALUE, JAVA_BYTE));
    public static final ValueLayout.OfInt C_LONG = ValueLayout.JAVA_INT;
    public static final ValueLayout.OfDouble C_LONG_DOUBLE = ValueLayout.JAVA_DOUBLE;

    private static class sumD {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_DOUBLE,
            library_h.C_DOUBLE,
            library_h.C_DOUBLE
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumD");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern double sumD(double d1, double d2)
     * }
     */
    public static FunctionDescriptor sumD$descriptor() {
        return sumD.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern double sumD(double d1, double d2)
     * }
     */
    public static MethodHandle sumD$handle() {
        return sumD.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern double sumD(double d1, double d2)
     * }
     */
    public static MemorySegment sumD$address() {
        return sumD.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern double sumD(double d1, double d2)
     * }
     */
    public static double sumD(double d1, double d2) {
        var mh$ = sumD.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumD", d1, d2);
            }
            return (double)mh$.invokeExact(d1, d2);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumArrD {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_DOUBLE,
            library_h.C_POINTER,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumArrD");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern double sumArrD(const double *arr, int count)
     * }
     */
    public static FunctionDescriptor sumArrD$descriptor() {
        return sumArrD.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern double sumArrD(const double *arr, int count)
     * }
     */
    public static MethodHandle sumArrD$handle() {
        return sumArrD.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern double sumArrD(const double *arr, int count)
     * }
     */
    public static MemorySegment sumArrD$address() {
        return sumArrD.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern double sumArrD(const double *arr, int count)
     * }
     */
    public static double sumArrD(MemorySegment arr, int count) {
        var mh$ = sumArrD.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumArrD", arr, count);
            }
            return (double)mh$.invokeExact(arr, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumArrDD {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_DOUBLE,
            library_h.C_POINTER,
            library_h.C_POINTER,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumArrDD");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern double sumArrDD(const double *arr, const double *arr2, int count)
     * }
     */
    public static FunctionDescriptor sumArrDD$descriptor() {
        return sumArrDD.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern double sumArrDD(const double *arr, const double *arr2, int count)
     * }
     */
    public static MethodHandle sumArrDD$handle() {
        return sumArrDD.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern double sumArrDD(const double *arr, const double *arr2, int count)
     * }
     */
    public static MemorySegment sumArrDD$address() {
        return sumArrDD.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern double sumArrDD(const double *arr, const double *arr2, int count)
     * }
     */
    public static double sumArrDD(MemorySegment arr, MemorySegment arr2, int count) {
        var mh$ = sumArrDD.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumArrDD", arr, arr2, count);
            }
            return (double)mh$.invokeExact(arr, arr2, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class readD {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            library_h.C_POINTER,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("readD");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void readD(double *v, int set)
     * }
     */
    public static FunctionDescriptor readD$descriptor() {
        return readD.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void readD(double *v, int set)
     * }
     */
    public static MethodHandle readD$handle() {
        return readD.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void readD(double *v, int set)
     * }
     */
    public static MemorySegment readD$address() {
        return readD.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void readD(double *v, int set)
     * }
     */
    public static void readD(MemorySegment v, int set) {
        var mh$ = readD.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("readD", v, set);
            }
            mh$.invokeExact(v, set);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumMatDPtrPtr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_DOUBLE,
            library_h.C_INT,
            library_h.C_INT,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumMatDPtrPtr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern double sumMatDPtrPtr(int rows, int cols, const double **mat)
     * }
     */
    public static FunctionDescriptor sumMatDPtrPtr$descriptor() {
        return sumMatDPtrPtr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern double sumMatDPtrPtr(int rows, int cols, const double **mat)
     * }
     */
    public static MethodHandle sumMatDPtrPtr$handle() {
        return sumMatDPtrPtr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern double sumMatDPtrPtr(int rows, int cols, const double **mat)
     * }
     */
    public static MemorySegment sumMatDPtrPtr$address() {
        return sumMatDPtrPtr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern double sumMatDPtrPtr(int rows, int cols, const double **mat)
     * }
     */
    public static double sumMatDPtrPtr(int rows, int cols, MemorySegment mat) {
        var mh$ = sumMatDPtrPtr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumMatDPtrPtr", rows, cols, mat);
            }
            return (double)mh$.invokeExact(rows, cols, mat);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumArrF {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_FLOAT,
            library_h.C_POINTER,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumArrF");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern float sumArrF(const float *arr, int count)
     * }
     */
    public static FunctionDescriptor sumArrF$descriptor() {
        return sumArrF.DESC;
    }
